<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#48D0B0"
    android:backgroundTint="#48D0B0">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#48D0B0"
    android:backgroundTint="#48D0B0">

    <TextView

        android:id="@+id/lbl.nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="10dp"
        android:text="@string/bulbasauro"
        android:textColor="@color/white"
        android:textSize="34sp"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl.caracteristicas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@color/background"
            android:backgroundTint="@color/background"
            android:text="@string/grama"
            android:textColor="@color/white"

            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/lbl.caracteristica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:background="@color/background"
            android:backgroundTint="@color/background"
            android:text="@string/veneno"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck"
            />

    </LinearLayout>

    <ImageView
        android:id="@+id/img.pokemon"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@drawable/pokemon_bulbasaur_png_pic"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="451dp"
        android:background="@drawable/border"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl.sobre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:text="@string/sobre"
            tools:ignore="TextContrastCheck" />


        <LinearLayout
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/border2"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:outlineAmbientShadowColor="@color/black"
            android:outlineSpotShadowColor="@color/black">


            <LinearLayout
                android:layout_width="294dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbl.altura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:gravity="left"
                    android:text="@string/altura" />

                <TextView
                    android:id="@+id/lbl.peso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/peso" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="292dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbl.alturam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:gravity="left"
                    android:text="@string/_70_cm" />

                <TextView
                    android:id="@+id/lbl.pesokg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/_6_9kg" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/lbl.treino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="30dp"
            android:gravity="left"
            android:text="@string/treinamento"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl.exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/base_exp" />

            <TextView
                android:id="@+id/lbl.exp_base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_64" />
        </LinearLayout>


    </LinearLayout>



</LinearLayout>

</ScrollView>